Fixes to Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -1891,7 +1891,7 @@ msgid ""
 "take an extra step outside the rings to regain balance."
 msgstr ""
 "Capaç de caminar, trepitjant amb un peu a cada cercle, tocant-ne un o amb "
-"necessitat de un pas extra fora dels cercles per recuperar l'equilibri."
+"necessitat d'un pas extra fora dels cercles per recuperar l'equilibri."
 
 #: ../glade/chronojump.glade.h:424
 msgid ""
@@ -1992,14 +1992,14 @@ msgstr "Connectant a l'eix"
 
 #: ../glade/chronojump.glade.h:447
 msgid "Number of anchorages"
-msgstr "Nombre d'anclatges"
+msgstr "Nombre d'ancoratges"
 
 #: ../glade/chronojump.glade.h:448
 msgid ""
 "Average diameter (cm) of the cone or axis where the rope is wrapped on each "
 "anchorage."
 msgstr ""
-"Diàmetre mitjà (cm) del con o eix on la corda s'enrotlla amb cada anclatge"
+"Diàmetre mitjà (cm) del con o eix on la corda s'enrotlla amb cada ancoratge."
 
 #: ../glade/chronojump.glade.h:449
 msgid "Push angle"
@@ -6412,7 +6412,7 @@ msgid ""
 "Maybe this file is opened by an SpreadSheet software like Excel. Please, "
 "close that program."
 msgstr ""
-"Potser aquest arxiu ja esta obert per algun programa de fulls de càlcul. Si "
+"Potser aquest arxiu ja està obert per algun programa de fulls de càlcul. Si "
 "us plau, tanqueu aquest programa."
 
 #: ../src/gui/person.cs:1949 ../src/gui/preferences.cs:629
@@ -7454,11 +7454,11 @@ msgid ""
 "touching it, and go back to your seat, stepping into the circles, trying not "
 "to touch any of them. Finally, sit down again, trying not to use your arms\"."
 msgstr ""
-"Les instruccions per executar el test son les següents:\"Asseieu-vos amb "
+"Les instruccions per executar el test són les següents:\"Asseieu-vos amb "
 "l'esquena reposant sobre el respatller de la cadira i amb els dos braços "
 "sobre les cames. Quan sentiu la paraula \"ja\", aixequeu-vos sense usar els "
 "braços, xuteu la pilota enfront vostre tant fort com sigui possible, usant "
-"l' empenya del peu amb el que us sentiu més segur. Seguidament camineu al "
+"l'empenya del peu amb el que us sentiu més segur. Seguidament camineu al "
 "vostre ritme normal comptant enrere des de 15 fins a 0 en veu alta. Gireu al "
 "voltant del con, sense tocar-lo, torneu al vostre seient, trepitjant dintre "
 "dels cercles intentant no tocar-ne cap. Finalment, torneu a seure intentant "
@@ -7484,12 +7484,12 @@ msgstr ""
 "Els cronòmetres van ser activats a la paraula de 'ja' i el també el botó que "
 "desa els temps dels intervals va se pitjat: quan el subjecte es va aixecar i "
 "va xutar la pilota; quan la pilota va passar la línia de 8m; i qual el "
-"subjecte va retornar a la posició de assegut a la mateixa cadira (42 cm "
+"subjecte va retornar a la posició d'assegut a la mateixa cadira (42 cm "
 "d'alçada des de la cadira al terra). El temps total necessari per completar "
 "el test proporciona una avaluació quantitativa del rendiment. Una avaluació "
 "qualitativa es va efectuar amb un qüestionari de satisfacció. Aquest "
 "qüestionari mostra 6 objectes en una escala de Likert del 0 al 3, on 0 "
-"equival a necessitar ajut per completar la tasca i 3 el equivalent a "
+"equival a necessitar ajut per completar la tasca i 3 l'equivalent a "
 "completar la tasca sense ajut i sense errors. La puntuació màxima que es pot "
 "assolir és 18. Els objectes van ser: (1) aixecar-se de la cadira, (2) xutar "
 "la pilota, (3) comptar mentre es compte enrere des de 15 fins a 0, (4) "
