Minor ca, es translations

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: chronojump\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-06-15 12:48+0200\n"
-"PO-Revision-Date: 2016-06-09 17:18+0100\n"
+"PO-Revision-Date: 2016-06-15 15:25+0100\n"
 "Last-Translator: x.padulles@gmail.com <support@chronojump.org>\n"
 "Language-Team: \n"
-"Language: Catalan\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.10\n"
 
 #: ../CesarPlayer/Capturer/FakeCapturer.cs:81
 msgid "Fake live source"
@@ -5592,29 +5592,25 @@ msgstr "Data de la sessió"
 
 #. don't show now
 #: ../src/gui/encoder.cs:743
-#, fuzzy, csharp-format
+#, csharp-format
 msgid "Saved 1RM values of athlete {0} in {1} exercise."
-msgstr "Valors de 1RM de l'atleta {0} desats en aquesta sessió."
+msgstr "Valors de 1RM de l'atleta {0} desats per l'exercici {1}."
 
 #: ../src/gui/encoder.cs:745
 msgid "If you want to delete a row, right click on it."
 msgstr "Si desitgeu esborrar una filera, feu clic dret sobre aquesta."
 
 #: ../src/gui/encoder.cs:746
-#, fuzzy
 msgid "If there is more than one value, top one will be used."
-msgstr ""
-"Si hi ha més d'un valor per un exercici,\n"
-"el valor usat és el superior."
+msgstr "Si hi ha més d'un valor, el valor usat és el de dalt."
 
 #: ../src/gui/encoder.cs:750
 msgid "Manually add"
 msgstr "Afegir manualment"
 
 #: ../src/gui/encoder.cs:753
-#, fuzzy
 msgid "Add 1RM value"
-msgstr "Desa valor 1RM"
+msgstr "Afegir valor 1RM"
 
 #: ../src/gui/encoder.cs:767 ../src/gui/encoder.cs:1187
 #: ../src/gui/encoderSelectRepetitions.cs:272 ../src/gui/executeAuto.cs:309
@@ -5667,9 +5663,8 @@ msgid "Saved repetitions related to this set will also be deleted."
 msgstr "Les repeticions relacionades amb aquesta sèrie també seran esborrades."
 
 #: ../src/gui/encoder.cs:1399
-#, fuzzy
 msgid "Gravitory sets captured on this session"
-msgstr "Seleccioni la sèrie de l'atleta {0} d'aquesta sessió."
+msgstr "Sèries gravitatòries en aquesta sessió"
 
 #: ../src/gui/encoder.cs:1405
 msgid "Displaced mass"
@@ -5680,9 +5675,8 @@ msgid "Sets"
 msgstr "Sèries"
 
 #: ../src/gui/encoder.cs:1409
-#, fuzzy
 msgid "Inertial sets captured on this session"
-msgstr "Seleccioni la sèrie de l'atleta {0} d'aquesta sessió."
+msgstr "Sèries inercials en aquesta sessió"
 
 #: ../src/gui/encoder.cs:1504
 msgid "Export set in CSV format"
