--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2009-03-22 10:11+0000\n"
 "Last-Translator: Jen Ockwell <jenfraggleubuntu@gmail.com>\n"
 "Language-Team: British English <en@li.org>\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
