--- a/po/it.po
+++ b/po/it.po
@@ -9,7 +9,7 @@ msgstr ""
 "PO-Revision-Date: 2016-03-07 10:29+0100\n"
 "Last-Translator: Federico Perego <perego.f59@vodafone.it>\n"
 "Language-Team: italian\n"
-"Language: it_IT\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
