--- a/po/pt.po
+++ b/po/pt.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2007-04-03 23:00+0000\n"
 "Last-Translator: Artur Martins <arturmartins@gmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
