--- a/po/ru.po
+++ b/po/ru.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2012-05-03 13:48+0400\n"
 "Last-Translator: Aleksej Kabanov <ak099@mail.ru>\n"
 "Language-Team: Russian <gnome-cyr@gnome.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
