--- a/po/vi.po
+++ b/po/vi.po
@@ -10,6 +10,7 @@ msgstr "Project-Id-Version: chronojump Gnome HEAD\n"
 "PO-Revision-Date: 2006-10-16 16:32+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
