--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: chronojump\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-08-05 09:31+0200\n"
-"PO-Revision-Date: 2016-08-05 11:15+0200\n"
+"PO-Revision-Date: 2016-08-05 11:30+0200\n"
 "Last-Translator: x.padulles@gmail.com <support@chronojump.org>\n"
 "Language-Team: \n"
 "Language: ca\n"
@@ -1284,11 +1284,12 @@ msgid ""
 msgstr "Salts, bandas elàstiques"
 
 #: ../glade/chronojump.glade.h:280
-#, fuzzy
 msgid ""
 "Concentric,\n"
 "isometric"
-msgstr "Concèntric-excèntric"
+msgstr ""
+"Concèntric,\n"
+"isomètric"
 
 #: ../glade/chronojump.glade.h:282 ../src/encoder.cs:668
 msgid "Concentric"
